Добавлен функционал формирования отчета о семенах

--- a/Bonfire/Views/Windows/MainWindow.xaml
+++ b/Bonfire/Views/Windows/MainWindow.xaml
@@ -22,6 +22,7 @@
                 </ItemsPanelTemplate>
             </Menu.ItemsPanel>
             <MenuItem Header="Файл">
+                <MenuItem Header="Отчет по семенам" Command="{Binding CreateSeedsReportCommand}"/>
                 <MenuItem Header="Выход" Command="{StaticResource CloseWindowCommand}"/>
             </MenuItem>
             <MenuItem Command="{Binding ShowSeedViewModelCommand}">
