Добавлено окно рассады

--- a/Bonfire/Templates/ModelMainView.xaml
+++ b/Bonfire/Templates/ModelMainView.xaml
@@ -12,5 +12,10 @@
         <view:LibraryEditorWindow DataContext="{Binding}"></view:LibraryEditorWindow>
 
     </DataTemplate>
-    
+
+    <DataTemplate DataType="{x:Type vm:SeedlingsViewModel}">
+        <view:SeedlingsWindow DataContext="{Binding}"></view:SeedlingsWindow>
+
+    </DataTemplate>
+
 </ResourceDictionary>
