--- a/Bonfire/Views/Windows/MainWindow.xaml
+++ b/Bonfire/Views/Windows/MainWindow.xaml
@@ -43,6 +43,14 @@
                     </StackPanel>
                 </MenuItem.Header>
             </MenuItem>
+            <MenuItem Command="{Binding ShowSeedlingsViewModelCommand}">
+                <MenuItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <fa5:ImageAwesome Icon="Solid_Seedling" Height="13"  Margin="0, 0,5,0" Foreground="DarkSeaGreen"/>
+                        <TextBlock Text="Рассада"></TextBlock>
+                    </StackPanel>
+                </MenuItem.Header>
+            </MenuItem>
         </Menu>
         
         <StatusBar DockPanel.Dock="Bottom">
